--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/nodemailer": "^6.4.14",
     "@types/pg": "^8.10.7",
     "@types/uuid": "^9.0.6",
+    "tsc-alias": "^1.8.8",
     "typescript": "^5.2.2"
   },
   "dependencies": {
@@ -34,6 +35,7 @@
     "nodemailer": "^6.9.8",
     "nodemon": "^3.0.1",
     "pg": "^8.11.3",
+    "sharp": "^0.33.2",
     "uuid": "^9.0.1"
   }
 }
