--- a/tsconfig.json
+++ b/tsconfig.json
@@ -105,6 +105,6 @@
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
   "include": [
-    "src/**/*"
+    "src/**/*",
   ]
 }
